# ws-b-box

./: .gitignore  main.py  pyproject.toml  test.py  val_image_summary.csv  vg2.py  vig.py  vig3.py  vigualize.py
tools/: report_atlas_unetwithbox_paper.py  train_atlas_unetwithbox.py  train_promise_unetwithbox.py  valid_atlas_unetwithbox.py  visualize_atlas_unetwithbox_paper.py
torchvision_wj/: _C_atlas.py  _C_promise.py  __init__.py
torchvision_wj/datasets/: __init__.py  atlas.py  image.old.py  image.py  promise.py
torchvision_wj/datasets/samplers/: patient_sampler.py
torchvision_wj/models/segwithbox/: DeepLabv3.py  SequentialBoostingEnsemble.py  bagging.py  boosting.py  boosting_ensemble.py  boosting_ensemble2.py  boosting_ensemble_test.py  boosting_v3.py  boosting_v3_doc.py  boosting_v4.py  default_unet_net.py  enet.py  enet_23.py  residualunet.py  simple_models.py  unetwithbox.py
torchvision_wj/utils/: atlas_utils.py  engin2.py  engine.py  losses.py  parallel_transform.py
