[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.2",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "medpy>=0.5.2",
    "nibabel>=5.3.2",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "simpleitk>=2.5.2",
    "tensorboard>=2.20.0",
    "torch",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = { path = "C:/Users/pc/Downloads/torch-2.9.0+cu126-cp314-cp314-win_amd64.whl" }
